@@ -14,6 +14,7 @@ Incompatibilities:
 
 Improvements:
 
+ - Horizontal scrolling. Bound to Left/Right by default.
  - Tree view: avoid flickering when updating.
  - Tree view: annotate entries with commit information.
  - Tree & blob view: open any blob in an editor.
